Adding chai as dependency

--- a/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
@@ -12,7 +12,7 @@ main:
   - tiene un ejemplo de un programa básico de NEEES
   responses:
   - (*) el visor no me asusta, lo que sí lo hace son los números raros de abajo [debugger]
-  - ¿qué lenguaje es este? 😮 [language]
+  - ¿qué lenguaje es éste? 😮 [language]
 
 debugger:
   messages:
