--- a/src/data/levels/001_Assembly language/001_Now it's your turn/chat/en.yml
+++ b/src/data/levels/001_Assembly language/001_Now it's your turn/chat/en.yml
@@ -23,7 +23,7 @@ help:
   - remember that before writing to memory, you need to load the value on [A]
   - "and when you type literal numbers, you must prefix them with #"
   - "e.g. if you want to load a $99, it's `LDA #$99` instead of `LDA $99`"
-  - "(the latter will load into [A] whatever value is in the memory address $0099)"
+  - "(the latter would load into [A] whatever value is in the memory address $0099)"
   responses:
   - thanks, I'll try [thanks]
 
