--- a/src/data/levels/001_Assembly language/001_Now it's your turn/chat/es.yml
+++ b/src/data/levels/001_Assembly language/001_Now it's your turn/chat/es.yml
@@ -1,6 +1,34 @@
 ---
 main:
   messages:
-  - coming soon!
+  - ahora es tu turno 😛
+  - haz un programa que escriba el número $7C en las direcciones $4055 y $4072
+  - luego, el número $18 en la dirección $40B8
+  - prueba el programa con el botón ⏩
+  - cuando esté listo, cierra el chat y ejecuta el comando `test`
   responses:
-  - ok [end]
+  - no, necesito ayuda 😔 [help]
+  - (*) ¿me puedes recordar cómo correr el otro comando? [othercommands]
+
+othercommands:
+  messages:
+  - seguro
+  - presiona `Ctrl+C`
+  - escribe `test`, luego Enter
+  responses:
+  - entendido [main]
+
+help:
+  messages:
+  - recuerda que antes de escribir en memoria, debes cargar el valor en [A]
+  - "y cuando escribes numeros literales, debes agregarles el prefijo #"
+  - "p. ej. si quieres cargar un $99, es `LDA #$99` en lugar de `LDA $99`"
+  - "(lo último cargaría en [A] lo que sea que esté en la dirección de memoria $0099)"
+  responses:
+  - gracias, voy a intentar [thanks]
+
+thanks:
+  messages:
+  - :)
+  events:
+  - ___ [end]
