--- a/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
@@ -2,7 +2,7 @@
 main:
   run: |
     set((m) => {
-      m.chat.stopBlock = "¡Ahora no!";
+      m.chat.stopBlock = locales.get("not_now");
       m.$canRun = false;
     });
   messages:
