--- a/src/data/levels/001_Assembly language/001_Now it's your turn/chat/es.yml
+++ b/src/data/levels/001_Assembly language/001_Now it's your turn/chat/es.yml
@@ -1,5 +1,7 @@
 ---
 main:
+  run: |
+    set((m) => m.chat.winOnEnd = false);
   messages:
   - ahora es tu turno 😛
   - haz un programa que escriba el número $7C en las direcciones $4055 y $4072
@@ -25,10 +27,4 @@ help:
   - "p. ej. si quieres cargar un $99, es `LDA #$99` en lugar de `LDA $99`"
   - "(lo último cargaría en [A] lo que sea que esté en la dirección de memoria $0099)"
   responses:
-  - gracias, voy a intentar [thanks]
-
-thanks:
-  messages:
-  - :)
-  events:
-  - ___ [end]
+  - gracias, voy a intentar [end]
