New winOnEnd's default value is false

--- a/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
@@ -1,5 +1,7 @@
 ---
 main:
+  run: |
+    set((m) => m.chat.winOnEnd = true);
   messages:
   - before starting, let's review how to use the computer
   - you can launch several apps from this terminal
