--- a/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
@@ -2,6 +2,7 @@
 main:
   run: |
     set((m) => {
+      m.chat.winOnEnd = true;
       m.chat.stopBlock = locales.get("not_now");
       m.$canRun = false;
     });
