--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
+    "updated-xterm-for-react": "5.0.0",
+    "xterm": "5.0.0",
     "xterm-addon-fit": "^0.5.0",
-    "xterm-for-react": "^1.0.4",
     "yaml": "^2.1.1"
   },
   "main": "desktop.js",
