--- a/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
@@ -17,7 +17,7 @@ main:
 
 debugger:
   messages:
-  - ¿el debugger de CPU?
+  - ¿el depurador de CPU?
   - nah, no te preocupes
   - ¡voy a explicar todo!
   responses:
