--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "updated-xterm-for-react": "5.0.0",
     "xterm": "5.0.0",
     "xterm-addon-fit": "^0.5.0",
+    "xterm-link-provider": "^1.3.1",
     "yaml": "^2.1.1"
   },
   "main": "desktop.js",
