--- a/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
@@ -9,7 +9,7 @@ main:
   - 💬  tell me about this app [app]
   - 💬  tell me about other apps [otherapps]
   - 💬  what's in the other half of the screen? [tv]
-  - 💬  how can I scroll in the terminal? [scroll]
+  - 💬  how can I scroll/copy/paste in the terminal? [terminal]
   - 💬  how can I navigate between panes? [panes]
   - 👌  gotcha [end]
 
@@ -46,10 +46,10 @@ turnontv:
   responses:
   - ...main
 
-scroll:
+terminal:
   messages:
-  - you can use `Ctrl+Shift+PageUp` and `Ctrl+Shift+PageDown`
-  - or your mouse wheel
+  - "for scrolling: `Ctrl+Shift+PageUp` and `Ctrl+Shift+PageDown`, or your mouse wheel"
+  - "for copy&paste: `Ctrl+Shift+C` and `Ctrl+Shift+V`"
   responses:
   - ...main
 
