--- a/src/data/levels/001_Assembly language/002_Reading from memory/chat/es.yml
+++ b/src/data/levels/001_Assembly language/002_Reading from memory/chat/es.yml
@@ -38,7 +38,7 @@ tryit:
     set((m) => m.$canRun = true);
   messages:
   - sí, hay un $10 ya cargado en $4085
-  - ejecuta el código actual y mira qué ocurre
+  - ejecuta el código actual y mira qué ocurre ⏩
   events:
   - end [result]
 
