Adding 003_Flags level

--- a/src/data/levels/001_Assembly language/002_Reading from memory/chat/en.yml
+++ b/src/data/levels/001_Assembly language/002_Reading from memory/chat/en.yml
@@ -69,10 +69,9 @@ result:
   - but... [iknow]
 
 iknow:
-  run: |
-    set((m) => m.$end = true);
   run-after-messages: |
     set((m) => {
+      m.$end = true;
       m.chat.stopBlock = null;
       m.$canEdit = true;
     });
@@ -90,5 +89,4 @@ refactor:
   - make it so it uses `ADC` instead of 3 incrementing instructions
   - (remember to replace `LDX` and `STX` with `LDA` and `STA`)
   - when you're ready, run the `test` command
-  responses:
-  - ok [end]
+  responses: []
