--- a/src/data/levels/001_Assembly language/002_Reading from memory/chat/es.yml
+++ b/src/data/levels/001_Assembly language/002_Reading from memory/chat/es.yml
@@ -69,10 +69,9 @@ result:
   - pero... [iknow]
 
 iknow:
-  run: |
-    set((m) => m.$end = true);
   run-after-messages: |
     set((m) => {
+      m.$end = true;
       m.chat.stopBlock = null;
       m.$canEdit = true;
     });
@@ -90,5 +89,4 @@ refactor:
   - haz que use `ADC` en vez de 3 instrucciones de incremento
   - (recuerda reemplazar `LDX` y `STX` por `LDA` y `STA`)
   - cuando esté listo, ejecuta el comando `test`
-  responses:
-  - ok [end]
+  responses: []
