--- a/src/data/levels/001_Assembly language/002_Reading from memory/chat/es.yml
+++ b/src/data/levels/001_Assembly language/002_Reading from memory/chat/es.yml
@@ -70,10 +70,12 @@ result:
 
 iknow:
   run-after-messages: |
+    level.fillContentFromTemp();
     set((m) => {
       m.$end = true;
       m.chat.stopBlock = null;
       m.$canEdit = true;
+      m.content.useTempContent = false;
     });
   messages:
   - ya sé, dije [A] en vez de [X]
