--- a/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
+++ b/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
@@ -84,12 +84,12 @@ exercise:
       m.$end = true;
       m.chat.stopBlock = null;
       m.$canEdit = true;
+      m.content.useTempContent = false;
     });
   messages:
   - the opposite of `BNE` is `BEQ`, which jumps when the numbers are equal
   - let's practice 👾
-  - delete the current code
-  - and build a program that reads the value of $4080
+  - build a program that reads the value of $4080
   - if it has a 7, writes $EE to $40BF
   - if not, writes $AA to $40BF
   - then, run the `test` command
