--- a/src/data/levels/001_Assembly language/003_Flags/chat/en.yml
+++ b/src/data/levels/001_Assembly language/003_Flags/chat/en.yml
@@ -101,10 +101,12 @@ decimal:
 
 exercise:
   run-after-messages: |
+    level.fillContentFromTemp();
     set((m) => {
       m.$end = true;
       m.chat.stopBlock = null;
       m.$canEdit = true;
+      m.content.useTempContent = false;
     });
   messages:
   - yup, there's a Zero Flag, which is set by all instructions to 1 when the result is zero
