--- a/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
@@ -39,7 +39,27 @@ machinecode:
   - the code starts from the $4020 memory address
   - if you place your mouse pointer over one of these addresses, it'll show where each instruction starts
   responses:
+  - (*) what's a memory address? [address]
   - what are the other numbers? 👀 [otherthings]
+
+address:
+  messages:
+  - a 2-byte number that represents a location in memory 🐏
+  - it can go from 0 ($0000) to 65535 ($FFFF)
+  responses:
+  - but you said the NEEES only had 2KiB (2048 bytes) of memory 😕 [butyousaid]
+  - ...machinecode
+
+butyousaid:
+  messages:
+  - that's true
+  - but the CPU can <see> up to 64KiB
+  - so the first two kilobytes are actual RAM
+  - and the rest is used to interact with the hardware 💻
+  - that doesn't matter too much in this chapter
+  - we're simulating a 64KiB RAM for simplicity
+  responses:
+  - ...machinecode
 
 otherthings:
   run-after-messages: |
