--- a/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
@@ -39,7 +39,27 @@ machinecode:
   - el código empieza desde la dirección de memoria $4020
   - si posas el cursor de tu mouse sobre una de estas direcciones, mostrará dónde empieza cada instrucción
   responses:
+  - (*) ¿qué es una dirección de memoria? [address]
   - ¿qué son los otros números? 👀 [otherthings]
+
+address:
+  messages:
+  - un número de 2 bytes que representa una ubicación dentro de la memoria 🐏
+  - puede ir de 0 ($0000) a 65535 ($FFFF)
+  responses:
+  - pero dijiste que la NEEES solo tenía 2KiB (2048 bytes) de memoria 😕 [butyousaid]
+  - ...machinecode
+
+butyousaid:
+  messages:
+  - eso es cierto
+  - pero la CPU puede <ver> hasta 64KiB
+  - así que los primeros dos kilobytes son RAM de verdad
+  - y el resto se usa para interactuar con el hardware 💻
+  - eso no importa mucho en este capítulo
+  - estamos simulando una RAM de 64KiB por simplicidad
+  responses:
+  - ...machinecode
 
 otherthings:
   run-after-messages: |
