Explaining some addressing modes

--- a/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
+++ b/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
@@ -80,6 +80,7 @@ oh:
 
 exercise:
   run-after-messages: |
+    level.fillContentFromTemp();
     set((m) => {
       m.$end = true;
       m.chat.stopBlock = null;
@@ -89,7 +90,8 @@ exercise:
   messages:
   - the opposite of `BNE` is `BEQ`, which jumps when the numbers are equal
   - let's practice 👾
-  - build a program that reads the value of $4080
+  - delete the current code
+  - and build a program that reads the value of $4080
   - if it has a 7, writes $EE to $40BF
   - if not, writes $AA to $40BF
   - then, run the `test` command
