--- a/src/data/levels/001_Assembly language/005_Addressing modes (1-2)/chat/es.yml
+++ b/src/data/levels/001_Assembly language/005_Addressing modes (1-2)/chat/es.yml
@@ -11,4 +11,6 @@ main:
     }
   messages:
   - coming soon
+  - part of the level is available in english though
+  - try switching the language in the home screen
   responses: []
