--- a/src/data/levels/001_Assembly language/006_Addressing modes (2-3)/chat/es.yml
+++ b/src/data/levels/001_Assembly language/006_Addressing modes (2-3)/chat/es.yml
@@ -124,6 +124,6 @@ exercise:
   messages:
   - borra todo el código
   - construye un programa que grite por la memoria 😱
-  - that means, it writes $AA exactly 64 times from $4080 to $40BF
-  - as always, when you're ready, run the `test` command
+  - eso significa, que escriba $AA exactamente 64 veces desde $4080 hasta $40BF
+  - como siempre, cuando esté listo, ejecuta el comando `test`
   responses: []
