--- a/src/data/levels/000_Getting started/000_Introduction/chat/en.yml
+++ b/src/data/levels/000_Getting started/000_Introduction/chat/en.yml
@@ -25,7 +25,7 @@ forwhat:
 
 name:
   messages:
-  - I think it stands for <"No Entiendo" Enigmatic Enjoyment Solution>, but I'm not sure
+  - I think it stands for <'No Entiendo' Enigmatic Enjoyment Solution>, but I'm not sure
   responses:
   - oh, I see - where did you find that? [namehow]
   - ...forwhat
